# mlops-energy-prediction

./: .env.example  .gitignore  GITHUB_PUSH_GUIDE.md  QUICKSTART.md  QUICK_GIT_COMMANDS.txt  README.md  drift_analysis_report.html  gradient_boosting_predictions.csv  model_performance_drift.csv  push-to-github.ps1  pyproject.toml  random_forest_predictions.csv  test_payload.json  xgboost_predictions.csv
mlflow_setup/: mlflow_config.py  setup_ec2.md
src/: data_cleaning.py  drift_analysis.py  drift_analysis_nannyml.py  h2o_automl.py  promote_champion_model.py  train_model1.py  train_model2.py  train_model3.py
src/api/: main.py
tests/: test_api.py
